--- a/src/components/SideBar/Sidebar.css
+++ b/src/components/SideBar/Sidebar.css
@@ -83,3 +83,21 @@
         opacity: 1
     }
 }
+
+
+@media (max-width: 600px) {
+    .sidebar {
+        display: none; 
+    }
+
+    .sidebar .menu {
+        display: block;
+        position: fixed;
+        top: 15px;
+        left: 15px;
+        z-index: 1000;
+        background-color: #f0f4f9;
+        border-radius: 50%;
+        padding: 5px;
+    }
+}
